<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TwitterClient</string>
    <string name="action_settings">Settings</string>
    <string name="signin_note">Sign in with Twitter</string>
    <string name="title_activity_timeline">Timeline</string>
    <string name="tweet_item">Tweet Item</string>
    <string name="title_activity_compose">Compose</string>
    <string name="compose">Compose</string>
    <string name="refresh">Refresh</string>
    <string name="tweet">Tweet</string>
    <string name="cancel">Cancel</string>
    <string name="max_characters">"/140"</string>
    <string name="null_characters">0</string>
    <string name="say_something">Say something, Dude!</string>
    <string name="gossip_leak">Gossip Leak!</string>
    <string name="user_name">User Name</string>
    <string name="user_description">User Decription</string>
    <string name="follower">Follower</string>
    <string name="following">Following</string>
    <string name="profile">Profile</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="hello_world">Hello world!</string>

</resources>
